# flet-demo-app

./: .gitignore  README.md  controls.py  core.py  main.py  models.py  pages.py  pyproject.toml  requirements.txt  urls.py  views.py
.github/workflows/: mobile-builds.yml
src/: controls.py  core.py  models.py  pages.py  routing.py  urls.py  views.py
