[project]
name = "Restaurant"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "PavelCode5426", email = "perezpavel5426@gmial.com" }
]
#dependencies = [
#    "flet",
#    "flet_route",
#    "peewee"
#]


[tool.flet]
org = "com.pavelcode5426" # --org
product = "Restaurant" # --product
company = "PavelCode5426" # --company
copyright = "Copyright (C) 2024 by MyCompany" # --copyright
build_number = 4 # --build-number
#dependencies = [
#    "flet",
#    "flet_route",
#    "peewee"
#]

[tool.flet.app]
exclude = ["assets"]

[tool.flet.compile]
app = true
packages = true
cleanup = true