[project]
name = "Restaurant"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flet",
    "flet_route",
    "sqlalchemy"
]


[tool.flet]
org = "com.pavelcode5426" # --org
product = "Restaurant" # --product
company = "PavelCode5426" # --company
copyright = "Copyright (C) 2024 by MyCompany" # --copyright
build_number = 4 # --build-number
dependencies = [
    "flet",
    "flet_route",
    "sqlalchemy"
]

[tool.flet.app]
exclude = ["assets"]