[project]
name = "restaurant"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flet",
    "flet_route",
    "sqlalchemy",
    "py-directus",
    "python-dotenv"
]


[tool.flet]
org = "com.pavelcode5426" # --org
product = "Restaurant" # --product
company = "PavelCode5426" # --company
copyright = "Copyright (C) 2025 by PavelCode5426" # --copyright
bundle_id = "com.pavelcode5426.restaurant"
build_number = 4 # --build-number
dependencies = [
    "flet",
    "flet_route",
    "sqlalchemy",
    "py-directus",
    "python-dotenv"
]

[tool.flet.app]
exclude = ["assets"]